samples/_failures_safe/1761259448_a4b987_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c995056a.c: In function ‘main’:
./samples/SAFE/__tmp_c995056a.c:126:13: error: expected expression at end of input
  126 |             if (!
      |             ^~
./samples/SAFE/__tmp_c995056a.c:126:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c995056a.c:126:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c995056a.c:126:13: error: expected declaration or statement at end of input
